syntax = "proto3";
import "commontype/RouteMatcher.proto";

option java_multiple_files = true;
option java_package = "com.baidu.bifromq.dist.rpc.proto";
option java_outer_classname = "MatchRouteProtos";

package distservice;

message MatchRoute {
  commontype.RouteMatcher matcher = 1;
  uint32 brokerId = 2;
  string receiverId = 3;
  string delivererKey = 4;
  uint64 incarnation = 5;
}